security.tf
resource "aws_security_group" "worker_group_one" {
  name_prefix = "worker_group_one"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [
      "10.0.0.0/8"
    ]
  }

}

resource "aws_security_group" "worker_group_two" {
  name_prefix = "worker_group_two"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"

    cidr_blocks = [
      "10.0.0.0/8"
    ]
  }

}

resource "aws_security_group" "all_worker" {
  name_prefix = "all_worker"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [
      "10.0.0.0/8"
    ]
  }

}
